# karpathy-zero_to_hero

./: README.md  pyproject.toml
notebooks/exploratory/: 01_intro_nn_backprop_micrograd.ipynb  02_intro_to_language_modeling_makemore.ipynb  03_intro_to_.ipynb  04_intro_to_actiations_gradients_batchnorm.ipynb  05_intro_to_backprop.ipynb  06_intro_to_wavenet.ipynb  07_intro_to_gpt.ipynb  08_intro_to_gpt_tokenizers.ipynb  eda_template.ipynb
src/: bigram_v1.py  bigram_v2.py  bigram_v3.py  bigram_v4 (multi head computation).py  bigram_v5 (block computation and communication).py  bigram_v6 (layer normalization).py  bigram_v7 (layer normalization scale up).py
