[tool.poetry]
name = "karpathy-zero-to-hero"
version = "0.1.0"
description = "Poetry environment for working through Andrej Karpathy's Zero to Hero Neural Networks course"
authors = ["Aaron W Chen <awc33@cornell.edu>"]
readme = "README.md"
# packages = [{include = "karpathy_zero_to_hero"}]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.18.1"
jupyter = "^1.0.0"
jupyterlab = "^4.0.9"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
SciPy = "^1.11.4"
statsmodels = "^0.14.1"
torch = "^2.1.2"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
